# csv_processor

./: Dockerfile  README.md  build.sh  libcsv.c  libcsv.h  pyproject.toml  test_libcsv.c
src/: process_csv.py  schema.py
src/tests/: test_process_csv.py
